<resources>
    <string name="app_name">Popular Movies Stage 2</string>
    <string name="movie_poster_image">Movie Poster</string>
    <string name="api_key">API_KEY</string>
    <string name="heading_movie_rating">Rating</string>
    <string name="top_rated_menu_title">Top Rated</string>
    <string name="favorite_menu_title">Favorites</string>

    <string name="most_popular_menu_title">Most Popular</string>
    <string name="no_internet_text">Please check your internet connection</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="release_date_label">Release Date</string>
    <string name="remove_from_favorites_button_title">Remove from Favorites</string>
    <string name="add_to_favorites_button_title">Add To Favorites</string>
    <string name="trailers_button_text">Watch Trailer</string>

</resources>
