<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscrollview_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageview_poster"
                android:layout_width="match_parent"
                android:layout_height="350dp"

                android:src="@drawable/movie_poster"

                android:contentDescription="@string/movie_poster_image" />

            <LinearLayout
                android:id="@+id/scroll_view_movie_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageview_poster"
                android:orientation="vertical">


                <Button
                    android:id="@+id/button_favorite"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="@dimen/padding_small"
                    android:text="@string/add_to_favorites_button_title"
                    android:textSize="@dimen/text_size_small" />


                <TextView
                    android:id="@+id/textview_original_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    tools:text="title goes here" />

                <TextView
                    android:id="@+id/textview_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_small"
                    android:paddingEnd="@dimen/padding_large"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large"
                    android:paddingStart="@dimen/padding_large"
                    android:textAlignment="center"
                    tools:text="The plot goes here" />

                <TextView
                    android:id="@+id/textview_release_date_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_weight="1"
                    android:text="@string/release_date_label"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_default"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:text="the date goes here" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_weight="1"
                    android:text="@string/heading_movie_rating"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_default"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textview_vote_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:text="the vote goes here" />

                <TextView
                    android:id="@+id/trailers_header_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_weight="1"
                    android:text="@string/trailers_label"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_default"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/reviews_header_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_weight="1"
                    android:text="@string/reviews_label"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_default"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_large"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>






